--- a/views/admin/pre-add-admin.ejs
+++ b/views/admin/pre-add-admin.ejs
@@ -26,48 +26,83 @@
         <div class="form-form">
             <div class="form-form-wrap">
 
+                <h2 class="mt-4">You Must log into the system to add new Admin</h2>
                 <div class="form-container">
                     <div class="form-content">
                         <%- include('../partials/flash/flash.ejs') %>
 
-                            <div class="d-flex user-meta">
-                                <img src="/assets/img/profile-7.jpg" class="usr-profile" alt="avatar">
-                                <div class="">
-                                    <p class="">Shaun Park</p>
-                                </div>
-                            </div>
-
-                            <form class="text-left" action="/dormitory/admin/system-key/check" method="post">
-                                <div class="form">
-                                    <div id="password-field" class="field-wrapper input mb-2">
-                                        <div class="d-flex justify-content-between">
-                                            <label for="password">ENTER OLD SYSTEM PASSWORD</label>
-                                        </div>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock">
-                                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
-                                            <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
-                                        </svg>
-                                        <input id="systemPassword" name="systemPassword" type="password"
-                                            class="form-control" placeholder="Old Password">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                            stroke-linecap="round" stroke-linejoin="round" id="toggle-password"
-                                            class="feather feather-eye">
-                                            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                                            <circle cx="12" cy="12" r="3"></circle>
-                                        </svg>
+                            <% if (currentUser){ %>
+                                <div class="d-flex user-meta">
+                                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="60"
+                                        height="60">
+                                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round">
+                                        </g>
+                                        <g id="SVGRepo_iconCarrier">
+                                            <path opacity="0.4"
+                                                d="M12.1207 12.78C12.0507 12.77 11.9607 12.77 11.8807 12.78C10.1207 12.72 8.7207 11.28 8.7207 9.50998C8.7207 7.69998 10.1807 6.22998 12.0007 6.22998C13.8107 6.22998 15.2807 7.69998 15.2807 9.50998C15.2707 11.28 13.8807 12.72 12.1207 12.78Z"
+                                                stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                            <path opacity="0.34"
+                                                d="M18.7398 19.3801C16.9598 21.0101 14.5998 22.0001 11.9998 22.0001C9.39977 22.0001 7.03977 21.0101 5.25977 19.3801C5.35977 18.4401 5.95977 17.5201 7.02977 16.8001C9.76977 14.9801 14.2498 14.9801 16.9698 16.8001C18.0398 17.5201 18.6398 18.4401 18.7398 19.3801Z"
+                                                stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                            <path
+                                                d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                                stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                stroke-linejoin="round"></path>
+                                        </g>
+                                    </svg>
+                                    <div class="ml-3">
+                                        <p class="">
+                                            <%= currentUser.FullName %>
+                                        </p>
                                     </div>
-                                    <div class="d-sm-flex justify-content-between">
-                                        <div class="field-wrapper">
-                                            <button type="submit" id="checkPassBtn" class="btn btn-primary"
-                                                value="">Next</button>
+                                </div>
+
+                                <% }else{ %>
+                                    <div class="d-flex user-meta">
+
+                                        <div class="">
+                                            <a href="/dormitory/admin/login">
+                                                <p class="text-primary"><u>login as admin</u></p>
+                                            </a>
                                         </div>
                                     </div>
+                                    <% } %>
 
-                                </div>
-                            </form>
+                                        <form class="text-left" action="/dormitory/admin/add-admin" method="post">
+                                            <div class="form">
+                                                <div id="password-field" class="field-wrapper input mb-2">
+                                                    <div class="d-flex justify-content-between">
+                                                        <label for="password">ENTER SYSTEM PASSWORD</label>
+                                                    </div>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                        viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                        class="feather feather-lock">
+                                                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                                        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                                                    </svg>
+                                                    <input id="systemPassword" name="systemPassword" type="password"
+                                                        class="form-control" placeholder="System Password">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                        viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                        id="toggle-password" class="feather feather-eye">
+                                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                                        <circle cx="12" cy="12" r="3"></circle>
+                                                    </svg>
+                                                </div>
+                                                <div class="d-sm-flex justify-content-between">
+                                                    <div class="field-wrapper">
+                                                        <button type="submit" id="checkPassBtn" class="btn btn-primary"
+                                                            value="">Next</button>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </form>
 
                     </div>
                 </div>
