--- a/views/admin/hostelites-list.ejs
+++ b/views/admin/hostelites-list.ejs
@@ -98,10 +98,9 @@
                                                         role="alert">
                                                         <h1 class="text-white mb-4"><strong>Hello!</strong></h1>
                                                         <h2 class="text-white"> No Registrations Yet</h2>
-                                                        <h6 class="text-white"><a href="/post-face"
-                                                                class="badge outline-badge-secondary bg-dark p-2">Register</a>
-                                                            a
-                                                            Student
+                                                        <h6 class="text-white"><a href="/dormitory/admin/add-hostellite"
+                                                                class="badge outline-badge-secondary bg-dark p-2">Add a
+                                                                Student</a>
                                                             to get
                                                             Started
                                                         </h6>
