--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -262,7 +262,23 @@
                                                         alt="avatar">
                                                 </a>
                                                 <% }else{ %>
-                                                    <img src="/assets/img/profile-6.jpg" alt="avatar">
+                                                    <svg viewBox="0 0 24 24" fill="none" width="60" height="60"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
+                                                            stroke-linejoin="round"></g>
+                                                        <g id="SVGRepo_iconCarrier">
+                                                            <path opacity="0.4"
+                                                                d="M12 22.01C17.5228 22.01 22 17.5329 22 12.01C22 6.48716 17.5228 2.01001 12 2.01001C6.47715 2.01001 2 6.48716 2 12.01C2 17.5329 6.47715 22.01 12 22.01Z"
+                                                                fill="#292D32"></path>
+                                                            <path
+                                                                d="M12 6.93994C9.93 6.93994 8.25 8.61994 8.25 10.6899C8.25 12.7199 9.84 14.3699 11.95 14.4299C11.98 14.4299 12.02 14.4299 12.04 14.4299C12.06 14.4299 12.09 14.4299 12.11 14.4299C12.12 14.4299 12.13 14.4299 12.13 14.4299C14.15 14.3599 15.74 12.7199 15.75 10.6899C15.75 8.61994 14.07 6.93994 12 6.93994Z"
+                                                                fill="#292D32"></path>
+                                                            <path
+                                                                d="M18.7807 19.36C17.0007 21 14.6207 22.01 12.0007 22.01C9.3807 22.01 7.0007 21 5.2207 19.36C5.4607 18.45 6.1107 17.62 7.0607 16.98C9.7907 15.16 14.2307 15.16 16.9407 16.98C17.9007 17.62 18.5407 18.45 18.7807 19.36Z"
+                                                                fill="#292D32"></path>
+                                                        </g>
+                                                    </svg>
                                                     <% } %>
                                                         <div
                                                             class="media-body d-flex flex-column align-items-center justify-content-center">
@@ -603,6 +619,52 @@
                                     </a>
                                 </li>
 
+
+                                <li class="menu">
+                                    <a href="/dormitory/admin/system-key/change" aria-expanded="false"
+                                        class="dropdown-toggle">
+                                        <div class="">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500"
+                                                xml:space="preserve" fill="#000000">
+                                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
+                                                    stroke-linejoin="round"></g>
+                                                <g id="SVGRepo_iconCarrier">
+                                                    <style type="text/css">
+                                                        .st0 {
+                                                            fill: #FFFFFF;
+                                                            stroke: #FFFFFF;
+                                                            stroke-width: 10;
+                                                            stroke-miterlimit: 10;
+                                                        }
+
+                                                        .st1 {
+                                                            fill: #FAC300;
+                                                        }
+                                                    </style>
+                                                    <g id="border">
+                                                        <path class="st0"
+                                                            d="M193.8,47.2c-8.5,1.1-16.7,3.5-24.6,6.9c0,0,0,0,0,0c-37.7,16.4-59.9,55.7-54.5,96.4 c6.7,50.4,53,85.8,103.3,79.2c0,0,0,0,0,0c3.2-0.4,6.5-1.1,9.6-1.8l102.4,225.7l11.5-5.2l20.5-9.3l-38.3-84.4l58.8-26.7l-8.8-19 l-58.6,26.6l-15.6-34.5l43.8-20.7L336,264l-43.9,20.8l-32.5-71.6c27.6-19.8,42-53.2,37.5-86.8C290.5,76,244.2,40.5,193.8,47.2 L193.8,47.2z M202.5,116.1c12.9-1.7,24.8,7.4,26.5,20.3c1.3,10.1-4,19.9-13.1,24.4c-2.3,1.1-4.7,1.8-7.2,2.2 c-12.9,1.7-24.8-7.4-26.5-20.3c-1.4-10.8,4.7-21.1,14.8-25.1c0.7-0.3,1.4-0.5,2.1-0.7c0.2,0,0.3-0.1,0.5-0.1 c0.6-0.2,1.2-0.3,1.8-0.4C201.7,116.2,202.1,116.2,202.5,116.1L202.5,116.1z">
+                                                        </path>
+                                                    </g>
+                                                    <g id="object" xmlns:cc="http://creativecommons.org/ns#"
+                                                        xmlns:dc="http://purl.org/dc/elements/1.1/"
+                                                        xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                                                        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                                        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                                                        xmlns:svg="http://www.w3.org/2000/svg">
+                                                        <path inkscape:connector-curvature="0" class="st1"
+                                                            d="M193.8,47.2c-8.5,1.1-16.7,3.5-24.6,6.9c0,0,0,0,0,0 c-37.7,16.4-59.9,55.7-54.5,96.4c6.7,50.4,53,85.8,103.3,79.2c0,0,0,0,0,0c3.2-0.4,6.5-1.1,9.6-1.8l102.4,225.7l11.5-5.2l20.5-9.3 l-38.3-84.4l58.8-26.7l-8.8-19l-58.6,26.6l-15.6-34.5l43.8-20.7L336,264l-43.9,20.8l-32.5-71.6c27.6-19.8,42-53.2,37.5-86.8 C290.5,76,244.2,40.5,193.8,47.2L193.8,47.2z M202.5,116.1c12.9-1.7,24.8,7.4,26.5,20.3c1.3,10.1-4,19.9-13.1,24.4 c-2.3,1.1-4.7,1.8-7.2,2.2c-12.9,1.7-24.8-7.4-26.5-20.3c-1.4-10.8,4.7-21.1,14.8-25.1c0.7-0.3,1.4-0.5,2.1-0.7 c0.2,0,0.3-0.1,0.5-0.1c0.6-0.2,1.2-0.3,1.8-0.4C201.7,116.2,202.1,116.2,202.5,116.1L202.5,116.1z">
+                                                        </path>
+                                                    </g>
+                                                </g>
+                                            </svg>
+                                            <span>Change Sysem Key</span>
+                                        </div>
+                                    </a>
+                                </li>
+
                                 <!-- <li class="menu">
                                     <a href="/dormitory/admin/login" aria-expanded="false" class="dropdown-toggle">
                                         <div class="">
@@ -639,7 +701,23 @@
                                                             alt="avatar">
                                                     </a>
                                                     <% }else{ %>
-                                                        <img src="/assets/img/profile-6.jpg" alt="avatar">
+                                                        <svg viewBox="0 0 24 24" fill="none" width="60" height="60"
+                                                            xmlns="http://www.w3.org/2000/svg">
+                                                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
+                                                                stroke-linejoin="round"></g>
+                                                            <g id="SVGRepo_iconCarrier">
+                                                                <path opacity="0.4"
+                                                                    d="M12 22.01C17.5228 22.01 22 17.5329 22 12.01C22 6.48716 17.5228 2.01001 12 2.01001C6.47715 2.01001 2 6.48716 2 12.01C2 17.5329 6.47715 22.01 12 22.01Z"
+                                                                    fill="#292D32"></path>
+                                                                <path
+                                                                    d="M12 6.93994C9.93 6.93994 8.25 8.61994 8.25 10.6899C8.25 12.7199 9.84 14.3699 11.95 14.4299C11.98 14.4299 12.02 14.4299 12.04 14.4299C12.06 14.4299 12.09 14.4299 12.11 14.4299C12.12 14.4299 12.13 14.4299 12.13 14.4299C14.15 14.3599 15.74 12.7199 15.75 10.6899C15.75 8.61994 14.07 6.93994 12 6.93994Z"
+                                                                    fill="#292D32"></path>
+                                                                <path
+                                                                    d="M18.7807 19.36C17.0007 21 14.6207 22.01 12.0007 22.01C9.3807 22.01 7.0007 21 5.2207 19.36C5.4607 18.45 6.1107 17.62 7.0607 16.98C9.7907 15.16 14.2307 15.16 16.9407 16.98C17.9007 17.62 18.5407 18.45 18.7807 19.36Z"
+                                                                    fill="#292D32"></path>
+                                                            </g>
+                                                        </svg>
                                                         <% } %>
                                                             <div
                                                                 class="media-body d-flex flex-column align-items-center justify-content-center">
