--- a/views/surveillance/surveillance.ejs
+++ b/views/surveillance/surveillance.ejs
@@ -16,7 +16,7 @@
                     <div class="toast toast-primary fade hide" role="alert" data-delay="6000" aria-live="assertive"
                         aria-atomic="true">
                         <div class="toast-header">
-                            <strong class="mr-auto"><span id="name"></span>&nbsp;Returned</strong>
+                            <strong class="mr-auto mr-5"><span id="name"></span>&nbsp;Returned</strong>
                             <small class="meta-time">just now</small>
                             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                                 <span aria-hidden="true">×</span>
